--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 .map-parent-container {
-  height: 400px; /* Ensure the parent container has a defined height */
+  height: 400px;
 }
 
 .map-container {
